# Point-OF-Sale

./: .gitignore  .pre-commit-config.yaml  NEXT_STEPS.md  dev.db  docker-compose.dev.yml  run_app.ps1
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_products_table.py  0002_create_users_table.py  0003_create_refresh_tokens_table.py  0004_create_categories_table.py  0005_create_product_import_tables.py  0006_create_inventory_movements_table.py  0007_create_sales_tables.py  0008_create_customers_table.py  0009_add_customer_to_sales.py  0010_create_returns_tables.py  0011_create_purchases_tables.py  0012_seed_admin_user.py  0013_create_admin_action_logs.py  0014_population_admin_action_logs_column.py  0015_create_employee_tables.py  0016_create_tenants_and_update_users.py  a69fcc420eab_create_subscription_plans_and_update_.py
backend/app/api/: main.py
backend/app/api/dependencies/: auth.py  cache.py
backend/app/core/: logging.py  settings.py
backend/app/shared/: pagination.py
backend/docker/: Dockerfile  entrypoint.sh
backend/docs/: api-realtime-phase4.md  architecture-audit-phase1.md  backend-finalization-phase8.md  customer-history-phase5.md  domain-consolidation-phase3.md  platform-hardening-phase2.md  postgres-migration.md  returns-phase6.md  supplier-intelligence-phase7.md
backend/scripts/: create_admin_user.py  create_cashier_user.py  create_super_admin.py  force_reset_admin_password.py  seed_subscription_plans.py
backend/tests/: conftest.py
docs/: ci-pipeline.md  (+4 more)
(+209 files in other folders)
