[tool.poetry]
name = "retail-pos-backend"
version = "0.1.0"
description = "Retail POS backend (FastAPI clean architecture skeleton)"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.0"
uvicorn = {extras=["standard"], version="^0.30.0"}
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
aiosqlite = "^0.20.0"
python-dotenv = "^1.0.1"
passlib = {version = "^1.7.4", extras=["argon2"]}
asyncpg = "0.30.0"
httpx = "^0.27.0"
redis = "^5.0.7"
celery = "^5.4.0"
tenacity = "^8.5.0"
structlog = "^24.1.0"
python-ulid = "^2.7.0"
alembic = "^1.13.2"
PyJWT = "^2.8.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
pytest-cov = "^5.0.0"
ruff = "^0.6.0"
mypy = "^1.11.1"
requests = "^2.32.3"
pre-commit = "^3.7.1"
bandit = "^1.7.8"
pip-audit = "^2.7.1"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM","N","Q"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["^\\.venv", "^build"]

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["alembic", "alembic.*", "alembic.env"]
ignore_errors = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
